# ChangeLog for media-libs/raptor
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/raptor/ChangeLog,v 1.62 2009/02/14 20:48:57 maekke Exp $

  14 Feb 2009; Markus Meier <maekke@gentoo.org> raptor-1.4.18.ebuild:
  amd64/x86 stable, bug #253493

  12 Feb 2009; Jeroen Roovers <jer@gentoo.org> raptor-1.4.18.ebuild:
  Stable for HPPA (bug #253493).

  27 Oct 2008; Jeroen Roovers <jer@gentoo.org> raptor-1.4.18.ebuild:
  Marked ~hppa (bug #244360).

*raptor-1.4.18 (05 Aug 2008)

  05 Aug 2008; Alexis Ballier <aballier@gentoo.org> +raptor-1.4.18.ebuild:
  version bump

  12 May 2008; Alexis Ballier <aballier@gentoo.org> raptor-1.4.16.ebuild,
  raptor-1.4.17.ebuild:
  add flex build dep, thanks Diego, bug #221395

*raptor-1.4.17 (14 Apr 2008)

  14 Apr 2008; Alexis Ballier <aballier@gentoo.org> +raptor-1.4.17.ebuild:
  version bump

  13 Nov 2007; Markus Rothe <corsair@gentoo.org> raptor-1.4.16.ebuild:
  Stable on ppc64; bug #198768

  11 Nov 2007; Raúl Porcel <armin76@gentoo.org> raptor-1.4.16.ebuild:
  ia64/sparc stable wrt #198768

  11 Nov 2007; Fabian Groffen <grobian@gentoo.org> raptor-1.4.9.ebuild,
  raptor-1.4.12.ebuild, raptor-1.4.15.ebuild:
  Dropped ppc-macos keyword, see you in prefix

  11 Nov 2007; nixnut <nixnut@gentoo.org> raptor-1.4.16.ebuild:
  Stable on ppc wrt bug 198768

  11 Nov 2007; Dawid Węgliński <cla@gentoo.org> raptor-1.4.16.ebuild:
  Stable on x86 (bug #198768)

  11 Nov 2007; Samuli Suominen <drac@gentoo.org> raptor-1.4.16.ebuild:
  amd64 stable

  15 Oct 2007; Markus Rothe <corsair@gentoo.org> raptor-1.4.15.ebuild:
  Stable on ppc64

  13 Oct 2007; Alexis Ballier <aballier@gentoo.org>
  +files/raptor-1.4.16-lm.patch, raptor-1.4.16.ebuild:
  Always link to libmath which is needed, bug #195649

*raptor-1.4.16 (10 Oct 2007)

  10 Oct 2007; Samuli Suominen <drac@gentoo.org> +raptor-1.4.16.ebuild:
  Version bump.

  13 Aug 2007; Tobias Scherbaum <dertobi123@gentoo.org>