@@ -1,9 +1,7 @@
 AUX raptor-1.4.16-lm.patch 406 RMD160 3553cdb8253e1fe2381d1be4c11f6d3371afff65 SHA1 b217d3b0d208ea72f489a3f3be40e7038d922b29 SHA256 ce43cd244d7c32f5ee61bc052e595c5f1ffef79f640588328a7730cae7a0da87
 DIST raptor-1.4.16.tar.gz 1510527 RMD160 a06ab396171d63df7877ea538295c3286e8651d1 SHA1 b85488c588ea49a44428bfa28c866047d65dd2ea SHA256 450b04ffd1553288507d20aa04da7b874faeec13dd2ea1b7af5ffdab957e85b0
-DIST raptor-1.4.17.tar.gz 1580715 RMD160 2c5a74ff98f9a461617679f0dd6cba4ee5d70335 SHA1 44db419540bf364aba76db84f6ce9ff739020b0f SHA256 4981ee12defae25384f890267036e0bad891ffa118da10d29f6bf637ab2faaf7
 DIST raptor-1.4.18.tar.gz 1657246 RMD160 00d43701b92a6b7befacf082bbf01a4ecfe71275 SHA1 d55390a4242ad61f034291f1c854ab037e508272 SHA256 edfdb0734fb7120bf1cbb60e45a07864db2daaadf5c3591ccf7357f244d82a40
 EBUILD raptor-1.4.16.ebuild 1463 RMD160 62f859ee9e40553c79bdf5ef38c283ced153dcc6 SHA1 0f548dfedf15d3a7e1b645e58a783717fdfe62fb SHA256 b572e4ad321c8c424d16171b710d58bf73bd0e6516dd63f5d11b2fe19c3419c1
-EBUILD raptor-1.4.17.ebuild 1426 RMD160 11037fa51fb1cdfcfbe8dec892db643eb4d9e3c8 SHA1 6950cd156451c9d728dcfa3492b0be9772a9a86f SHA256 55457a4e1986e9758df957836594847996c5699937d5f325a55af52d8618806b
-EBUILD raptor-1.4.18.ebuild 1482 RMD160 6394e6f59f060b8b56decd8040efc6d6c12bcdb9 SHA1 88fb872725dfe28d9102b1433cc8b139027a1b5f SHA256 48b5f1bd5aefb864d0e4442c41d65e100f1a00398bb2ff6ec53a8c196c299627
-MISC ChangeLog 7209 RMD160 5a26de8ee46971170f388d7c98a843ae8444db11 SHA1 e6c399079466572c095afb9dbb26add88f3a0251 SHA256 81ceb78f84db2c9527cdc31ba1579e4098591ff6e051713000ac0499dc4566e4
+EBUILD raptor-1.4.18.ebuild 1424 RMD160 62c0ce22a7bd320282cd60c37207f21de889fc20 SHA1 19e8872b13f2864b75c7d2fd9855d615cc26739a SHA256 a18c7fc0aa82b3f86437e5a26171b760fbe53cc9cd97094eef251ddbd05642d7
+MISC ChangeLog 7313 RMD160 efebfb1d8c4eb30b16086a777598a1a10c373fe0 SHA1 0c272feadae3718d1f272c70917ee3e32295c881 SHA256 9e58f1e953219eb156b8a7647563ab94a13fe45c679301d00eda85ddb8158fac
 MISC metadata.xml 158 RMD160 6842e2189a50bd8a98e84802c38180ac1421c00e SHA1 703cea5a2109d41f7c87993c1f01d418a4c85174 SHA256 dfb5b47e6836db39fb187301dfcff1c2605e91d13d21db160806a563d8c75f9b
